--- a/OEP-6/OEP-6.mediawiki
+++ b/OEP-6/OEP-6.mediawiki
@@ -121,9 +121,9 @@ function getPublicKey(account: string): Promise<string>
 </pre>
 Returns public key corresponding to an <code>account</code>. The <code>account</code> must be one of the accounts returned by <code>getOwnAccounts</code>. 
 
-* Rejects with '''MALFORMED_ACCOUNT''' in case the <code>account</code> is not a valid account
 * Rejects with '''NO_ACCOUNT''' in case the user is not signed in or has no accounts
 * Rejects with '''WRONG_ACCOUNT''' in case the <code>account</code> is not one of own accounts
+* Rejects with '''MALFORMED_ACCOUNT''' in case the <code>account</code> is not a valid account
 
 ====makeTransfer====
 <pre>
@@ -132,9 +132,9 @@ function makeTransfer(sender: string, recipient: string, asset: Asset, amount: B
 
 Initiates a transfer of <code>amount asset</code> from <code>sender</code> account to <code>recipient</code> account. The <code>sender</code> must be one of the accounts returned by <code>getOwnAccounts</code>.
 
-* Rejects with '''MALFORMED_ACCOUNT''' in case the <code>sender</code> or <code>recipient</code> is not a valid account
 * Rejects with '''NO_ACCOUNT''' in case the user is not signed in or has no accounts
 * Rejects with '''WRONG_ACCOUNT''' in case the <code>sender</code> is not one of own accounts
+* Rejects with '''MALFORMED_ACCOUNT''' in case the <code>sender</code> or <code>recipient</code> is not a valid account
 * Rejects with '''CANCELED''' in case the user cancels the request
 
 ===Identity===
@@ -199,7 +199,7 @@ Queries attributes attached to the <code>identity</code>. The <code>identity</co
 function addAttributes(identity: string, attributes: OntIdAttribute[]): Promise<void>
 </pre>
 
-Adds attributes to the identity. The <code>identity</code> must be one of the identities returned by <code>getOwnIdentities</code>.
+Adds attributes to the <code>identity</code>. The <code>identity</code> must be one of the identities returned by <code>getOwnIdentities</code>.
 
 * Rejects with '''NO_IDENTITY''' in case the user is not signed in or has no identity
 * Rejects with '''WRONG_IDENTITY''' in case the <code>identity</code> is not one of own identites
@@ -231,6 +231,11 @@ This method does not require the dApp to disclose the message itself, only the h
 Because malicious dApp can hash a real prepared transfer transaction and plant it for signing, that posses a risk to the user.
 Therefore the hash is prepended with known string '''Ontology message:''', and only this hash is put for signing.
 
+* Rejects with '''NO_ADDRESS''' in case the user is not signed in or has no account or identity
+* Rejects with '''WRONG_ADDRESS''' in case the <code>address</code> is not one of own accounts or identites
+* Rejects with '''MALFORMED_ADDRESS''' in case the <code>address</code> is not a valid account or identity
+* Rejects with '''MALFORMED_MESSAGE''' in case the <code>message</code> is not hex encoded
+
 ====verifyMessageHash====
 <pre>
 function verifyMessageHash(address: string, messageHash: string, address: string, signature: string): Promise<boolean>
@@ -239,6 +244,12 @@ function verifyMessageHash(address: string, messageHash: string, address: string
 Verifies that the <code>signature</code> is created by the account or identity over <code>messageHash</code>. The <code>address</code> '''must''' be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
 
 This method does not require the dApp to disclose the message itself, only the hash. The hash is prepended with known string '''Ontology message:''' and only this hash is put for verification.
+
+* Rejects with '''NO_ADDRESS''' in case the user is not signed in or has no account or identity
+* Rejects with '''WRONG_ADDRESS''' in case the <code>address</code> is not one of own accounts or identites
+* Rejects with '''MALFORMED_ADDRESS''' in case the <code>address</code> is not a valid account or identity
+* Rejects with '''MALFORMED_MESSAGE''' in case the <code>message</code> is not hex encoded
+* Rejects with '''MALFORMED_SIGNATURE''' in case the <code>signature</code> is not hex encoded
 
 ====verifyMessageHashPk====
 <pre>
@@ -249,15 +260,24 @@ Verifies that the <code>signature</code> is created by a private key correspondi
 
 This method does not require the dApp to disclose the message itself, only the hash. The hash is prepended with known string '''Ontology message:''' and only this hash is put for verification.
 
+* Rejects with '''MALFORMED_PUBLIC_KEY''' in case the <code>public key</code> is not hex encoded
+* Rejects with '''MALFORMED_MESSAGE''' in case the <code>message</code> is not hex encoded
+* Rejects with '''MALFORMED_SIGNATURE''' in case the <code>signature</code> is not hex encoded
+
 
 ====signMessage====
 <pre>
-function signMessage(message: string, address: string): Promise<string>
+function signMessage(address: string, message: string): Promise<string>
 </pre>
 
 Initiates signing of text <code>message</code> by the account or identity. The <code>address</code> '''must''' be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
 
 This method provide the dAPI provider with the message body, which it should display to the user prior to signing (e.g.: a contract to sign).
+
+* Rejects with '''NO_ADDRESS''' in case the user is not signed in or has no account or identity
+* Rejects with '''WRONG_ADDRESS''' in case the <code>address</code> is not one of own accounts or identites
+* Rejects with '''MALFORMED_ADDRESS''' in case the <code>address</code> is not a valid account or identity
+
 
 ====verifyMessage====
 <pre>
@@ -266,12 +286,21 @@ function verifyMessage(address: string, message: string, address: string, signat
 
 Verifies that the <code>signature</code> is created by the account or identity over text <code>message</code>. The <code>address</code> '''must''' be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
 
+* Rejects with '''NO_ADDRESS''' in case the user is not signed in or has no account or identity
+* Rejects with '''WRONG_ADDRESS''' in case the <code>address</code> is not one of own accounts or identites
+* Rejects with '''MALFORMED_ADDRESS''' in case the <code>address</code> is not a valid account or identity
+* Rejects with '''MALFORMED_MESSAGE''' in case the <code>message</code> is not hex encoded
+
+
 ====verifyMessagePk====
 <pre>
 function verifyMessage(publicKey: string, message: string, address: string, signature: string): Promise<boolean>
 </pre>
 
 Verifies that the <code>signature</code> is created by a private key corresponding to <code>publicKey</code> over text <code>message</code>. 
+
+* Rejects with '''MALFORMED_PUBLIC_KEY''' in case the <code>public key</code> is not hex encoded
+* Rejects with '''MALFORMED_SIGNATURE''' in case the <code>signature</code> is not hex encoded
 
 
 ===SmartContract===
@@ -301,6 +330,12 @@ Smart code execution is two step process:
 
 The <code>invoke</code> function will finish as soon as the transaction is sent to the network. To receive useful data from <code>method</code> execution it is necessary to start listening for events using <code>addEventListener</code>.
 
+* Rejects with '''NO_ACCOUNT''' in case the user is not signed in or has no accounts
+* Rejects with '''WRONG_ACCOUNT''' in case the <code>sender</code> is not one of own accounts
+* Rejects with '''MALFORMED_ACCOUNT''' in case the <code>account</code> is not a valid account
+* Rejects with '''MALFORMED_CONTRACT''' in case the <code>contract</code> is not hex encoded contract address
+* Rejects with '''MALFORMED_ADDRESS''' in case the <code>addresses</code> contains at least one address which is not a valid account nor identity
+
 
 ====invokeRead====
 <pre>
@@ -309,6 +344,9 @@ function invokeRead(contract: string, method: string, parameters: Parameter[]): 
 
 Initiates a <code>method</code> call to a smart <code>contract</code> with supplied <code>parameters</code> in read only mode (preExec). This kind of method call does not write anything to blockchain and therefore does not need to be signed or paid for. It is processed without user interaction.
 
+* Rejects with '''MALFORMED_CONTRACT''' in case the <code>contract</code> is not hex encoded contract address
+
+
 ====deploy====
 <pre>
 function deploy(account: string, code: string, name: string, version: string, author: string, 
@@ -316,6 +354,10 @@ function deploy(account: string, code: string, name: string, version: string, au
 </pre>
 
 Initiates deployment of smart contract. The <code>code</code> parameter represents compiled code of smart contract for NEOVM. The <code>gasPrice</code> and <code>gasLimit</code> are hints for the dAPI provider and it should allow user to override those values before signing. The <code>account</code> will be set as payer of the transaction. It '''must''' be one of the accounts returned by <code>getOwnAccounts</code>
+
+* Rejects with '''NO_ACCOUNT''' in case the user is not signed in or has no accounts
+* Rejects with '''WRONG_ACCOUNT''' in case the <code>sender</code> is not one of own accounts
+* Rejects with '''MALFORMED_ACCOUNT''' in case the <code>account</code> is not a valid account
 
 
 ====addEventListener====
