--- a/OEP-6/OEP-6.mediawiki
+++ b/OEP-6/OEP-6.mediawiki
@@ -145,10 +145,12 @@ Returns public key corresponding to an <code>account</code>. The <code>account</
 
 ====makeTransfer====
 <pre>
-function makeTransfer(sender: string, recipient: string, asset: Asset, amount: number): Promise<void>
+function makeTransfer(sender: string, recipient: string, asset: Asset, amount: number): Promise<string>
 </pre>
 
-Initiates a transfer of <code>amount asset</code> from <code>sender</code> account to <code>recipient</code> account. The <code>sender</code> must be one of the accounts returned by <code>getOwnAccounts</code>.
+Initiates a transfer of <code>amount asset</code> from <code>sender</code> account to <code>recipient</code> account. The <code>sender</code> must be one of the accounts returned by <code>getOwnAccounts</code>. 
+
+Returns transaction Id.
 
 * Rejects with '''NO_ACCOUNT''' in case the user is not signed in or has no accounts
 * Rejects with '''WRONG_ACCOUNT''' in case the <code>sender</code> is not one of own accounts
